--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.5.0",
     "@prisma/client": "^6.19.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@zenstackhq/runtime": "2.22.1",
     "@zenstackhq/server": "^2.22.1",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.3",
